#! /bin/sh
# -------------------------------------------------------------
# file: configure.in
# -------------------------------------------------------------
# -------------------------------------------------------------
# Battelle Memorial Institute
# Pacific Northwest Laboratory
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created March 25, 2003 by William A. Perkins
# Last Change: 2019-02-22 14:47:47 d3g096
# -------------------------------------------------------------

# -------------------------------------------------------------
# Initialization
# -------------------------------------------------------------
AC_INIT(libts,0.1)
AM_INIT_AUTOMAKE()
AM_MAINTAINER_MODE()

# -------------------------------------------------------------
# check some command line options
# -------------------------------------------------------------
# -------------------------------------------------------------
# Checks for Programs we need
# -------------------------------------------------------------
AC_PROG_FC()
AC_PROG_RANLIB()
AC_PROG_INSTALL()
AC_PROG_LN_S()

# -------------------------------------------------------------
# set appropriate flags for specified compiler
# -------------------------------------------------------------

AX_F90_MODULE_FLAG()
if test x$ax_cv_f90_modflag = x"not found" ; then
   AC_MSG_ERROR([unable to determine f90 modules flag])
fi
AC_SUBST(F90MODFLAG)
F90MODFLAG=$ax_cv_f90_modflag

AC_OUTPUT(Makefile)
